# spectralHaskellRepa

./: README.md  spRepa.cabal  stack.yaml
doc/: .gitignore  README.tex  makefile
results/: .data.dat.un~  plot
results/pic/: README.md
results/state/: README.md
src/: Constants.hs  Main.hs  Plotter.hs  Solver.hs  Utils.hs
